--- a/app/style.css
+++ b/app/style.css
@@ -9,12 +9,8 @@ body {
   position: relative;
   top: 0;
   left: 0;
-  width: 1920px;
-  min-width: 1920px;
   max-width: 1920px;
-  height: 900px;
   min-height: 900px;
-  max-height: 900px;
   border-bottom: 1px solid red;
 }
 
@@ -22,7 +18,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 1920px;
+  width: 100%;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -78,22 +74,28 @@ body {
 
 .settings_box {
   position: absolute;
-  bottom: 5rem;
-  left: 1rem;
-  width: 10rem;
-  border-radius: 10px;
-  border-bottom-left-radius: 0;
-  height: 14rem;
-  padding-top: .5rem;
-  background-color: rgba(0, 0, 0, 0.849);
+  bottom: 14rem;
+  width: auto;
+  height: 5rem;
+  left: -20rem;
+  opacity: 0;
+  -webkit-transition: .3s all ease-in-out;
+  transition: .3s all ease-in-out;
 }
 
-.settings_box ul {
+.settings_box .setting_list {
+  width: 10rem !important;
+  border-radius: 10px;
+  padding-top: .5rem;
+  height: 14rem;
+  border-bottom-left-radius: 0;
+  background-color: rgba(0, 0, 0, 0.849);
   list-style-type: none;
   width: 100%;
 }
 
-.settings_box ul li {
+.settings_box .setting_list li {
+  position: relative;
   width: 100%;
   border-bottom: 1px solid gray;
   color: white;
@@ -103,14 +105,82 @@ body {
   letter-spacing: 1px;
 }
 
+.settings_box .setting_list li::before {
+  content: '';
+  position: absolute;
+  right: 1rem;
+  width: 1rem;
+  height: 1rem;
+  background-image: url("./../images/chevron.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: covert;
+}
+
+.settings_box .setting_list .item_click::before {
+  content: '';
+  display: none;
+}
+
+.settings_box .setting_list .item_click:hover {
+  background-color: rgba(85, 78, 78, 0.583);
+}
+
 .settings_box::before {
   content: '';
   position: absolute;
-  bottom: -15px;
+  bottom: -159px;
   left: .4rem;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
   border-top: 15px solid rgba(0, 0, 0, 0.849);
+  z-index: -2;
+}
+
+.settings_hover {
+  position: absolute;
+  top: 0rem;
+  left: -20rem;
+  width: 10rem;
+  border-radius: 10px;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  border-top-left-radius: 0;
+  background-color: rgba(0, 0, 0, 0.849);
+}
+
+.settings_hover ul {
+  list-style-type: none;
+  width: 100%;
+}
+
+.settings_hover ul li {
+  position: relative;
+  width: 100%;
+  border-bottom: 1px solid gray;
+  color: white;
+  padding: .5rem 0rem .5rem 1rem;
+  font-size: .9rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.settings_hover ul li:hover {
+  background-color: rgba(85, 78, 78, 0.583);
+}
+
+.settings_hover ul li::before {
+  display: none;
+}
+
+.settings_hover::before {
+  content: '';
+  position: absolute;
+  top: 16px;
+  left: -12px;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-right: 12px solid rgba(0, 0, 0, 0.849);
   z-index: -2;
 }
 
