--- a/app/style.css
+++ b/app/style.css
@@ -9,9 +9,15 @@ body {
   position: relative;
   top: 0;
   left: 0;
-  max-width: 1920px;
+  min-width: 1920px;
   min-height: 900px;
-  border-bottom: 1px solid red;
+  height: 100vh;
+  max-height: 1030px;
+  background-image: url("./../images/151591750_219977139840710_4780431451432061648_n.jpg");
+  background-position: content;
+  background-repeat: no-repeat;
+  background-size: 1920px 1030px;
+  background-color: #493828;
 }
 
 .languages {
@@ -185,13 +191,21 @@ body {
 }
 
 header {
-  width: 100%;
-  height: 800px;
+  width: 40rem;
+  height: 80px;
+  background-color: rgba(0, 0, 0, 0.849);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom-right-radius: 15px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 header .Logo {
-  width: 100%;
-  height: auto;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -201,29 +215,40 @@ header .Logo {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-left: 1rem;
+  margin-right: 5rem;
 }
 
 header nav {
-  width: 100%;
-  height: auto;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 header nav ul {
-  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   list-style-type: none;
 }
 
 header nav ul li {
-  padding: 0 4rem;
+  padding: 1rem 4rem;
+  color: white;
+}
+
+header nav ul li:hover {
+  background-color: rgba(73, 66, 66, 0.377);
 }
 
 header nav ul li:nth-child(1) {
