--- a/app/style.scss
+++ b/app/style.scss
@@ -4,9 +4,15 @@
 }
 body{
     position: relative; top: 0; left: 0;
-    max-width: 1920px;
+    min-width: 1920px;
     min-height: 900px;
-    border-bottom: 1px solid red;
+    height: 100vh;
+    max-height: 1030px;
+    background-image: url("./../images/151591750_219977139840710_4780431451432061648_n.jpg");
+    background-position: content;
+    background-repeat: no-repeat;
+    background-size: 1920px 1030px;
+    background-color: #493828;
 }
 
 .languages{
@@ -161,30 +167,40 @@ body{
 }
 
 header{
-    width: 100%;
-    height: 800px;
+    width: 40rem;
+    height: 80px;
+    background-color: rgba(0, 0, 0, 0.849);
+    display: flex;
+    border-bottom-right-radius: 15px;
+    flex-direction: row;
 
     .Logo{
-        width: 100%;
-        height: auto;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-left: 1rem;
+        margin-right: 5rem;
     }
     nav{
-        width: 100%;
-        height: auto;
+        height: 100%;
+        display: flex;
+        align-items: center;
         
         ul{
-            width: 100%;
             display: flex;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             list-style-type: none;
 
             li{
-                padding: 0 4rem;
+                padding: 1rem 4rem;
+                color:white;
 
+
+                &:hover{
+                    background-color: rgba(73, 66, 66, 0.377);
+                }
                 &:nth-child(1){
                     border-right: 1px solid gray;
                 }
