--- a/app/style.css
+++ b/app/style.css
@@ -9,7 +9,8 @@ body {
   position: relative;
   top: 0;
   left: 0;
-  min-width: 1920px;
+  min-width: 1850px;
+  max-width: 1920px;
   min-height: 900px;
   height: 100vh;
   max-height: 1030px;
@@ -35,7 +36,7 @@ body {
   background-color: rgba(0, 0, 0, 0.534);
   -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
-  z-index: 200000000000000;
+  z-index: 2000000000000000000;
 }
 
 .languages .lan_list {
@@ -257,5 +258,147 @@ header nav ul li:nth-child(1) {
 
 header nav ul li:nth-child(2) {
   border-left: 1px solid gray;
+}
+
+.game {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.tabela {
+  position: relative;
+  top: 10rem;
+  left: 1rem;
+  width: 39rem;
+  height: auto;
+  color: white;
+  border-radius: 10px;
+  background-color: rgba(44, 35, 35, 0.582);
+  padding: 1rem;
+}
+
+.tabela table {
+  width: 100%;
+  height: 100%;
+}
+
+.tabela table tr {
+  border: 1px solid gray;
+}
+
+.tabela table tr .empty {
+  border: none;
+}
+
+.tabela table tr td {
+  border: 1px solid gray;
+  text-align: center;
+  padding: .4rem;
+}
+
+.tabela table tr .points[data-player="1"]:hover {
+  background-color: rgba(117, 108, 108, 0.582);
+}
+
+.tabela table .sumax1, .tabela table .sumax2, .tabela table .razem {
+  background-color: rgba(0, 0, 0, 0.205);
+}
+
+.gracze {
+  width: 65rem;
+  height: 55rem;
+  padding: 1rem;
+  border: 1px solid white;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.gracze .game_btn {
+  position: absolute;
+  bottom: 1rem;
+  left: calc((65rem - 18rem) / 2);
+}
+
+.gracze .game_btn button {
+  width: 18rem;
+  height: 3.5rem;
+  border: 1px solid red;
+  background-color: rgba(0, 0, 0, 0.39);
+  border-radius: 5px;
+  font-size: 1.5rem;
+  color: white;
+  letter-spacing: 5px;
+  outline: none;
+  text-decoration: none;
+}
+
+.gracze .user_1 .kostki {
+  position: absolute;
+  bottom: 6rem;
+  left: calc((65rem - 33.5rem) / 2);
+}
+
+.kostki {
+  border: 1px solid red;
+  width: 33.5rem;
+  height: 5.5rem;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.kostki .kostka {
+  position: relative;
+  top: 1rem;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  -webkit-transform-origin: 1.5rem 1.5rem;
+          transform-origin: 1.5rem 1.5rem;
+  margin: 0 3rem;
+  z-index: -2;
+}
+
+.kostki .kostka img {
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+  background-color: white;
+}
+
+.kostki .kostka .kostka_1_side {
+  -webkit-transform: rotateY(0deg) translateZ(1.5rem);
+          transform: rotateY(0deg) translateZ(1.5rem);
+}
+
+.kostki .kostka .kostka_2_side {
+  -webkit-transform: rotateY(90deg) translateZ(1.5rem);
+          transform: rotateY(90deg) translateZ(1.5rem);
+}
+
+.kostki .kostka .kostka_3_side {
+  -webkit-transform: rotateX(90deg) translateZ(-1.5rem);
+          transform: rotateX(90deg) translateZ(-1.5rem);
+}
+
+.kostki .kostka .kostka_4_side {
+  -webkit-transform: rotateX(-90deg) translateZ(-1.5rem);
+          transform: rotateX(-90deg) translateZ(-1.5rem);
+}
+
+.kostki .kostka .kostka_5_side {
+  -webkit-transform: rotateY(90deg) translateZ(-1.5rem);
+          transform: rotateY(90deg) translateZ(-1.5rem);
+}
+
+.kostki .kostka .kostka_6_side {
+  -webkit-transform: rotateY(0deg) translateZ(-1.5rem);
+          transform: rotateY(0deg) translateZ(-1.5rem);
 }
 /*# sourceMappingURL=style.css.map */
