--- a/app/style.scss
+++ b/app/style.scss
@@ -4,7 +4,8 @@
 }
 body{
     position: relative; top: 0; left: 0;
-    min-width: 1920px;
+    min-width: 1850px;
+    max-width: 1920px;
     min-height: 900px;
     height: 100vh;
     max-height: 1030px;
@@ -24,7 +25,7 @@ body{
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.534);
     transition: all .3s ease-in-out;
-    z-index: 200000000000000;
+    z-index: 2000000000000000000;
 
     .lan_list{
         position: relative; top: 325px;
@@ -208,6 +209,130 @@ header{
                     border-left: 1px solid gray;
                 }
             }
+        }
+    }
+}
+
+
+.game{
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+.tabela{
+    position: relative;
+    top: 10rem;
+    left: 1rem;
+    width: 39rem;
+    height: auto;
+    color: white;
+    border-radius: 10px;
+    background-color: rgba(44, 35, 35, 0.582);
+    padding: 1rem;
+
+    table{
+        width: 100%;
+        height: 100%;
+
+        tr{
+            border: 1px solid gray;
+
+            .empty{
+                border: none;
+            }
+            td{
+                border: 1px solid gray;
+                text-align: center;
+                padding: .4rem;
+            }
+            .points[data-player="1"]{
+                &:hover{
+                    background-color: rgba(117, 108, 108, 0.582);
+                }
+            }
+        }
+        .sumax1,.sumax2,.razem{
+            background-color: rgba(0, 0, 0, 0.205);
+        }
+    }
+}
+
+.gracze{
+    width: 65rem;
+    height: 55rem;
+    padding: 1rem;
+    border: 1px solid white;
+    position: absolute;
+    top: 1rem; right: 1rem;
+
+    .game_btn{
+        position: absolute;
+        bottom: 1rem;
+        left: calc((65rem - 18rem) / 2);
+        button{
+            width: 18rem;
+            height: 3.5rem;
+            border: 1px solid red;
+            background-color: rgba(0, 0, 0, 0.39);
+            border-radius: 5px;
+            font-size: 1.5rem;
+            color: white;
+            letter-spacing: 5px;
+            outline: none;
+            text-decoration: none;
+        }
+    }
+
+    .user_1{
+        .kostki{
+            position: absolute; bottom: 6rem; left: calc((65rem - 33.5rem) / 2);
+        }
+    }
+
+}
+
+
+
+.kostki{
+    border: 1px solid red;
+    width: 33.5rem;
+    height: 5.5rem;
+    position: relative;
+    display: flex;
+    .kostka{
+        position: relative;
+        top: 1rem;
+        transform-style: preserve-3d;
+        transition: all .3s ease-in-out;
+        transform-origin: 1.5rem 1.5rem;
+        margin:  0 3rem;
+        z-index: -2;
+        img{
+            position: absolute;
+            width:3rem;
+            height: 3rem;
+            background-color: white;
+        }
+        .kostka_1_side{
+            transform: rotateY(0deg) translateZ(1.5rem);
+        }
+        .kostka_2_side{
+            transform: rotateY(90deg) translateZ(1.5rem);
+        }
+        .kostka_3_side{
+            transform: rotateX(90deg) translateZ(-1.5rem);
+        }
+        .kostka_4_side{
+            transform: rotateX(-90deg) translateZ(-1.5rem);
+        }
+        .kostka_5_side{
+            transform: rotateY(90deg) translateZ(-1.5rem);
+        }
+        .kostka_6_side{
+            transform: rotateY(0deg) translateZ(-1.5rem);
         }
     }
 }
