--- a/app/style.css
+++ b/app/style.css
@@ -321,6 +321,8 @@ header nav ul li:nth-child(2) {
   position: absolute;
   bottom: 1rem;
   left: calc((65rem - 18rem) / 2);
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
 .gracze .game_btn button {
@@ -334,6 +336,29 @@ header nav ul li:nth-child(2) {
   letter-spacing: 5px;
   outline: none;
   text-decoration: none;
+}
+
+.gracze .repeat_btn {
+  width: 10rem;
+  height: 3.5rem;
+  position: absolute;
+  bottom: 1rem;
+  left: calc((65rem - 10rem) / 2);
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  display: none;
+  opacity: 0;
+  border: 1px solid red;
+  background-color: rgba(0, 0, 0, 0.39);
+}
+
+.gracze .repeat_btn div {
+  width: 100%;
+  height: 100%;
+  background-image: url("./../images/redo.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 2.5rem 2.5rem;
 }
 
 .gracze .user_1 .kostki {
@@ -362,7 +387,7 @@ header nav ul li:nth-child(2) {
   -webkit-transform-origin: 1.5rem 1.5rem;
           transform-origin: 1.5rem 1.5rem;
   margin: 0 3rem;
-  z-index: -2;
+  z-index: 2;
 }
 
 .kostki .kostka img {
