--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,45 @@
+::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #e1e1e1;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+
+::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -19,6 +61,7 @@ body {
   background-repeat: no-repeat;
   background-size: 1920px 1030px;
   background-color: #493828;
+  z-index: -1;
 }
 
 .languages {
@@ -36,7 +79,7 @@ body {
   background-color: rgba(0, 0, 0, 0.534);
   -webkit-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out;
-  z-index: 2000000000000000000;
+  z-index: 200000000000000000000000000000000;
 }
 
 .languages .lan_list {
@@ -262,10 +305,20 @@ header nav ul li:nth-child(2) {
 
 .game {
   position: absolute;
+  min-width: 1850px;
+  max-width: 1920px;
+  min-height: 900px;
+  height: 100vh;
+  max-height: 1030px;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
+  display: block;
+  opacity: 1;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
 }
 
 .tabela {
@@ -359,6 +412,28 @@ header nav ul li:nth-child(2) {
   background-position: center;
   background-repeat: no-repeat;
   background-size: 2.5rem 2.5rem;
+  pointer-events: none;
+}
+
+.gracze .Turn {
+  width: 15rem;
+  text-align: center;
+  height: 8rem;
+  font-size: 1.6rem;
+  position: absolute;
+  top: calc((55rem - 16rem) / 2);
+  left: calc((65rem - 15rem) / 2);
+  color: white;
+}
+
+.gracze .user_1 .header {
+  width: 10rem;
+  text-align: center;
+  font-size: 1.2rem;
+  position: absolute;
+  bottom: 12rem;
+  left: calc((65rem - 10rem) / 2);
+  color: white;
 }
 
 .gracze .user_1 .kostki {
@@ -367,8 +442,65 @@ header nav ul li:nth-child(2) {
   left: calc((65rem - 33.5rem) / 2);
 }
 
+.gracze .user_2 {
+  -webkit-transform: rotateZ(90deg);
+          transform: rotateZ(90deg);
+}
+
+.gracze .user_2 .header {
+  width: 10rem;
+  text-align: center;
+  font-size: 1.2rem;
+  position: absolute;
+  top: 20rem;
+  left: 50.5rem;
+  color: white;
+}
+
+.gracze .user_2 .kostki {
+  position: absolute;
+  top: 25rem;
+  left: 39rem;
+}
+
+.gracze .user_3 .header {
+  width: 10rem;
+  text-align: center;
+  font-size: 1.2rem;
+  position: absolute;
+  top: 6.5rem;
+  left: calc((65rem - 10rem) / 2);
+  color: white;
+}
+
+.gracze .user_3 .kostki {
+  position: absolute;
+  top: 1rem;
+  left: calc((65rem - 33.5rem) / 2);
+}
+
+.gracze .user_4 {
+  -webkit-transform: rotateZ(-90deg);
+          transform: rotateZ(-90deg);
+}
+
+.gracze .user_4 .header {
+  width: 10rem;
+  text-align: center;
+  font-size: 1.2rem;
+  position: absolute;
+  top: 20rem;
+  left: 2rem;
+  color: white;
+}
+
+.gracze .user_4 .kostki {
+  position: absolute;
+  top: 25rem;
+  right: 39rem;
+}
+
 .kostki {
-  border: 1px solid red;
   width: 33.5rem;
   height: 5.5rem;
   position: relative;
@@ -425,5 +557,97 @@ header nav ul li:nth-child(2) {
 .kostki .kostka .kostka_6_side {
   -webkit-transform: rotateY(0deg) translateZ(-1.5rem);
           transform: rotateY(0deg) translateZ(-1.5rem);
+}
+
+.History {
+  position: absolute;
+  top: -300vw;
+  left: 0;
+  min-width: 1850px;
+  max-width: 1920px;
+  min-height: 900px;
+  height: 100vh;
+  max-height: 1030px;
+  z-index: 20000;
+  opacity: 0;
+  z-index: -1;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.History .list {
+  width: 65rem;
+  height: 55rem;
+  padding: 1rem;
+  border: 1px solid white;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  background-color: rgba(0, 0, 0, 0.555);
+  overflow-y: scroll;
+}
+
+.History .list .item {
+  position: relative;
+  width: 100%;
+  height: 4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  color: white;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.History .list .item .id {
+  text-transform: uppercase;
+  padding: 0 1rem;
+  border-right: 1px solid white;
+}
+
+.History .list .item .users {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.History .list .item .users .gracz {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 1.5rem;
+  border-right: 1px solid white;
+}
+
+.History .list .item .users .gracz h1 {
+  font-size: 1.2rem;
+  padding-right: .5rem;
+}
+
+.History .list .item .users .gracz p {
+  font-size: 1rem;
+}
+
+.History .list .item .users .gracz[data-winner=true] {
+  background-color: rgba(168, 10, 10, 0.514);
 }
 /*# sourceMappingURL=style.css.map */
