--- a/app/style.scss
+++ b/app/style.scss
@@ -54,159 +54,9 @@ body{
     z-index: -1;
 }
 
-.languages{
-    position: absolute;
-    top: 0;left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.534);
-    transition: all .3s ease-in-out;
-    z-index: 200000000000000000000000000000000;
-
-    .lan_list{
-        position: relative; top: 325px;
-        padding: 0 1rem;
-        background-color: rgba(0, 0, 0, 0.432);
-        border-radius: 5px;
-        height: 250px;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        transition: all .3s ease-in-out;
-
-        .lan_item{
-            margin: 0 3rem 0 3rem;
-            width: 225px;
-
-            img{
-                display: block;
-                border-radius: 2px;
-            }
-        }
-    }
-}
-
-.settings{
-    position: absolute;
-    bottom: 1rem; left: 1rem;
-    img{
-        width: 2rem;
-        height: 2rem;
-    }
-}
-
-.settings_box{
-    position: absolute;
-    bottom: 14rem;
-    width: auto;
-    height: 5rem;
-    left: -20rem;
-    opacity: 0;
-    transition: .3s all ease-in-out;
-
-    .setting_list{
-        width: 10rem !important;
-        border-radius: 10px;
-        padding-top: .5rem;
-        height: 14rem;
-        border-bottom-left-radius: 0;
-        background-color: rgba(0, 0, 0, 0.849);
-        list-style-type: none;
-        width: 100%;
-        li{
-            position: relative;
-            width: 100%;
-            border-bottom: 1px solid gray;
-            color: white;
-            padding: .5rem 0rem .5rem 1rem;
-            font-size: .9rem;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-
-            &::before{
-                content: '';
-                position: absolute;
-                right: 1rem;
-                width: 1rem;
-                height: 1rem;
-                background-image: url("./../images/chevron.svg");
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size: covert;
-            }
-        }
-        .item_click{
-            &::before{
-                content: '';
-                display: none;
-            }
-            &:hover{
-                background-color: rgba(85, 78, 78, 0.583);
-            }
-        }
-    }
-
-    &::before{
-        content: '';
-        position: absolute;
-        bottom: -159px;
-        left: .4rem;
-        border-left: 10px solid transparent;
-        border-right: 10px solid transparent;
-        border-top: 15px solid rgba(0, 0, 0, 0.849);
-        z-index: -2;
-    }
-}
-
-.settings_hover{
-    position: absolute;
-    top: 0rem;
-    left: -20rem;
-    width: 10rem;
-    border-radius: 10px;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    border-top-left-radius: 0;
-    background-color: rgba(0, 0, 0, 0.849);
-
-    ul{
-        list-style-type: none;
-        width: 100%;
-        li{
-            position: relative;
-            width: 100%;
-            border-bottom: 1px solid gray;
-            color: white;
-            padding: .5rem 0rem .5rem 1rem;
-            font-size: .9rem;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            
-            &:hover{
-                background-color: rgba(85, 78, 78, 0.583);
-            }
-            &::before{
-                display: none;
-            }
-        }
-    }
-
-    &::before{
-        content: '';
-        position: absolute;
-        top: 16px;
-        left: -12px;
-        border-top: 8px solid transparent;
-        border-bottom: 8px solid transparent;
-        border-right: 12px solid rgba(0, 0, 0, 0.849);
-        z-index: -2;
-    }
-}
 
 header{
-    width: 40rem;
+    width: 28rem;
     height: 80px;
     background-color: rgba(0, 0, 0, 0.849);
     display: flex;
@@ -446,9 +296,6 @@ header{
         }
     }
 }
-
-
-
 .History{
     position: absolute;
     top: -300vw; left: 0;
@@ -518,4 +365,82 @@ header{
 
         }
     }
+}
+
+.rules{
+    position: absolute;
+     bottom: 1rem;
+     left: 1rem;
+     background-color: rgba(0, 0, 0, 0.61);
+     border : 1px solid red;
+     color: white;
+     font-size: 1.5rem;
+     font-weight: 600;
+     padding: .5rem 2rem;
+}
+
+.rules_box{
+    position: absolute;
+    top: -200vw;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.432);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 20000000000000000000000000000000000000000;
+    transition: all .3s ease-in-out;
+    
+    
+    .box{
+        transition: all .3s ease-in-out;
+        width: 40rem;
+        height: 50rem;
+        background-color: rgba(0, 0, 0, 0.719);
+        color:white;
+        padding:1rem;
+        overflow-y: scroll;
+
+        .header{
+            width: 100%;
+            height: 3rem;
+            border-bottom: 1px solid gray;
+            padding-bottom: .5rem;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+
+            h1{
+                font-size: 1.5rem;
+            }
+            img{
+                height: 3rem;
+            }
+        }
+
+        p{
+            padding: 1rem;
+            line-height: 1.5rem;
+        }
+
+        dl{
+            padding: 1rem;
+
+            dt{
+                font-size: 1.1rem;
+                margin-bottom: .5rem;
+            }
+            dd{
+                margin-left: 1rem;
+                font-size: 1rem;
+            }
+        }
+
+
+    }
+
+
 }
